# CPS_Android_HW

./: .gitignore  CMakeLists.txt  Main.qml  README.md  accelerometer.cpp  accelerometer.h  gyroscope.cpp  gyroscope.h  main.cpp  mainapp.qmlproject.qtds  mainwindow.cpp  mainwindow.h  mainwindow.ui  movement.cpp  movement.h  movementdatabase.cpp  movementdatabase.h  pattern.cpp  pattern.h  patterndatabase.cpp  patterndatabase.h
Pics/: initial pic
